# robotics-project

./: README.md  package.xml  setup.py
config/: action.yaml  mapping.yaml  navigation_policy.yaml  object.yaml  rules.yaml  target.yaml
config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
config/log/: latest_build
docs/: system_design.md
launch/: yolo_nav_e2e.launch.py  yolo_sanity_check.launch.py
models/objaverse/: manifest.json
script/: actions.py  camera_image_processor.py  download_objaverse_models.py  multi_target_runner.py  nav2_goal_sender.py  run_yolo_inference.py  sequence_executor.py  target_resolver.py  test_scenarios.py  test_yolo_detector.py  test_yolo_result_parser.py  vision_schema.py  vision_sequence_executor.py  vision_to_executor.py  yolo_detector.py
scripts/: nav2_goal_sender.py  test_pipeline.py
worlds/: world_yolo_sanity_check
